# financial-scraper

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  README_PYPI.md  mkdocs.yml  pyproject.toml  setup.cfg
data/: funds-22-08-2025.csv  stocks-18-09-2025.csv  stocks-22-09-2025.csv  stocks-24-09-2025.csv
data/funds/: funds-02-10-2025.csv  funds-22-09-2025.csv
data/funds_profits/: funds-profits-2024.csv  funds-profits-2025.csv
data/stocks/: stocks-02-10-2025.csv
docs/: changelog.md  contributing.md  examples.md  index.md
docs/getting-started/: basic-usage.md  installation.md
docs/modules/financial_scraper/: overview.md
docs/modules/financial_scraper/providers/: fundamentus.md  funds_explorer.md  investor_ten.md  market_data.md  status_invest.md  trading_view.md
downloads/: README.md  acoes-listadas-b3.csv  download_history.csv  statusinvest-busca-avancada-financeiro.csv  statusinvest-busca-avancada-todos.csv  statusinvest-busca-avancada.csv  trading-view-stocks.csv
examples/: usage.py
financial_scraper/: __init__.py
financial_scraper/config/: selenium.py
financial_scraper/providers/: fundamentus.py  funds_explorer.py  investor_ten.py  market_data.py  status_invest.py  trading_view.py
main/: core.py  main.py  settings.py
services/: fundamentus.py  funds_explorer.py  investor_ten.py  market_data.py  status_invest.py  trading_view.py
