[tool.poetry]
name = "web-scraping-financial"
version = "0.1.0"
description = ""
authors = ["João Pedro Limão <jplimao077@gmail.com>"]
packages = [
    {include = "main"},
    {include = "services"}
]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.13.4"
requests = "^2.32.5"
selenium = "^4.35.0"
requests-html = "^0.10.0"
lxml = {extras = ["html_clean"], version = "^6.0.1"}
lxml-html-clean = "^0.4.2"
pandas = "^2.3.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
get_funds = "main.main:get_funds"
get_stocks = "main.main:get_stocks"
generate_final_csv = "main.main:generate_final_csv"
get_funds_profits = "main.main:get_funds_profits"
get_market_data = "main.main:get_market_data"
get_trading_view_data = "main.main:get_data_from_trading_view"
get_stocks_fundamentus = "main.main:get_stocks_fundamentus"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
