[tool.poetry]
name = "web-scraping-financial"
version = "0.1.0"
description = ""
authors = ["João Pedro Limão <jplimao077@gmail.com>"]
packages = [
    {include = "financial_scraper"},
    {include = "examples"},
    {include = "services"},
]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.13.4"
requests = "^2.32.5"
selenium = "^4.35.0"
requests-html = "^0.10.0"
lxml = {extras = ["html_clean"], version = "^6.0.1"}
lxml-html-clean = "^0.4.2"
pandas = "^2.3.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
example_status_invest = "examples.usage:status_invest_example"
example_fundamentus = "examples.usage:fundamentus_example"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.cexample_status_investore.masonry.api"
